--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -29,4 +29,4 @@ jobs:
       run: |
         pylint pyaabb
         pycodestyle pyaabb
-        pydocstyle pyaabb
+        pydocstyle pyaabb --max-line-length 99
